# derivepassphrase

./: .gitignore  .gitmodules  .htaccess  CHANGELOG.md  LICENSE.txt  README.md  allow-all-unicode-passphrases.md  amend-vault-config.md  better-error-messages.md  concurrency-audit.md  concurrency-testing-in-test-suite.md  configuration-directory-must-exist.md  conventional-configurable-text-styling.md  export-vault-formats.md  exporter-script-as-subcommand.md  fail-gracefully-without-af-unix.md  falsy-vault-config-values.md  index.md  mkdocs.yml  mkdocs_devsetup.yml  mkdocs_offline.yml  no-stdlib-module-names.md  one-time-key-override-fails.md  other-derivation-schemes.md  pretty-print-json.md  print-service-notes-above.md  print-service-notes.md  pyproject.toml  remove-pageant-build-info-check.md  report-build-flags-and-features.md  ruff_defaults_v0.5.0.toml  scheme-specific-cli-and-config.md  single-toplevel-module.md  test-filesystem-isolation.md  test-suite-isolated-ssh-agent.md  towncrier-template.md  windows-ssh-agent-support.md
0.x/: 404.html  index.html  mkdocstrings_recommended_styles.css  objects.inv  sitemap.xml
0.x/_future/: index.html
0.x/changelog/: index.html
0.x/explanation/: index.html
0.x/how-tos/: index.html
0.x/pycompatibility/: index.html
0.x/reference/: index.html
0.x/tutorials/: index.html
0.x/upgrade-notes/: index.html
0.x/wishlist/: index.html
docs/: _future.md  _release_checklist.md  changelog.md  default_fonts_only.css  index.md  mkdocstrings_recommended_styles.css  pycompatibility.md  reference.md  upgrade-notes.md  wishlist_styling.css
docs-overrides/: main.html  redirect.html
docs-overrides/partials/: actions.html  copyright.html
docs/changelog.d/: 20240927_203241_the-13th-letter_purge_towncrier.md  20240927_203836_the-13th-letter_issue12.md  20240927_203945_the-13th-letter_hypothesis.md  20240929_234925_the-13th-letter_documentation_fixes.md  20240930_100726_the-13th-letter.md  20240930_150549_the-13th-letter_typing_fixes.md  20240930_152054_the-13th-letter_hypothesis.md  20241002_093114_the-13th-letter_support_py39.md  20241002_190203_the-13th-letter_issue15_graceful_af_unix_degredation.md  20241008_094814_the-13th-letter_vault_config_falsy.md  20241015_125506_the-13th-letter_vault_config_amending.md  20241015_130819_the-13th-letter_vault_config_amending.md  20241021_133349_the-13th-letter_030_fixes.md  20241123_190504_the-13th-letter_ssh_key_howto.md  20241208_175929_the-13th-letter_logging.md  20241217_202551_the-13th-letter_main_config_toml.md  20241220_165803_the-13th-letter_usage_fixes.md  20241221_000746_the-13th-letter_vault_missing_options.md  20250101_000304_the-13th-letter_i18n_l10n_infrastructure.md  20250101_002439_the-13th-letter_shell_completion.md  20250101_005352_the-13th-letter_no_color_force_color.md  20250107_145357_the-13th-letter_2025_and_zlib_license.md  20250111_191645_the-13th-letter_harmonize_exporter_interface.md  20250116_014011_the-13th-letter_usage_fixes.md  20250117_205159_the-13th-letter_fix_zsh_completion.md  20250128_134809_the-13th-letter_equivalent_hmac_key.md  20250129_162006_the-13th-letter_vault_module_api.md  20250129_222445_the-13th-letter_split_cli_module.md  20250131_145128_the-13th-letter_usage_fixes.md  20250131_145729_the-13th-letter_usage_fixes.md  20250207_173241_the-13th-letter_readable_json_dump.md  20250207_182820_the-13th-letter_notes_handling.md  20250209_234753_the-13th-letter_quality_control_automation.md  20250214_201307_the-13th-letter_extras_status_in_version_output.md  20250313_131455_the-13th-letter_concurrency_audit.md  20250313_132045_the-13th-letter_hatch_test_matrix.md  20250519_213751_the-13th-letter_concurrency_testing.md  20250522_231605_the-13th-letter_the_annoying_os.md  20250609_225111_the-13th-letter_defer_automatic_color_support.md  20250617_231508_the-13th-letter_changelog_v0_5.md  (+1 more)
docs/explanation/: faq-altered-versions.md  faq-vault-interchangable-passphrases.md  index.md
docs/how-tos/: index.md  ssh-key.md
docs/reference/: derivepassphrase-export-vault.1.md  derivepassphrase-export.1.md  derivepassphrase-vault.1  derivepassphrase-vault.1.md  derivepassphrase.1.md  derivepassphrase._internals.cli_helpers.md  derivepassphrase._internals.cli_machinery.md  derivepassphrase._internals.cli_messages.md  derivepassphrase._types.md  derivepassphrase.cli.md  derivepassphrase.cli.msg.md  derivepassphrase.exporter.md  derivepassphrase.md  derivepassphrase.sequin.md  derivepassphrase.ssh_agent.md  derivepassphrase.vault.md  derivepassphrase_export.1.md  exporter.md  exporter_vault.md  index.md  prerequisites-ssh-key.md  sequin.md  ssh_agent.md  ssh_agent_client.md  tests.md  tests.test_derivepassphrase_cli.md  tests.test_derivepassphrase_cli_export_vault.md  tests.test_derivepassphrase_exporter.md  tests.test_derivepassphrase_sequin.md  tests.test_derivepassphrase_ssh_agent.md  tests.test_l10n.md  (+4 more)
man/: derivepassphrase-export-vault.1  derivepassphrase-export.1  derivepassphrase-vault.1  derivepassphrase.1
other-stubs/: tomli.pyi
po/: de.po  derivepassphrase.pot  en_US@DEBUG.po
scripts/: man_diagnostics.py  qc_auto.py
tests/: __init__.py  conftest.py  test_000_testing_machinery.py  test_derivepassphrase.py  test_derivepassphrase_cli.py  test_derivepassphrase_cli_export_vault.py  test_derivepassphrase_exporter.py  test_derivepassphrase_exporter_cli.py  test_derivepassphrase_sequin.py  test_derivepassphrase_ssh_agent.py  test_derivepassphrase_types.py  test_derivepassphrase_typing.py  test_derivepassphrase_vault.py  test_key_signing.py  test_l10n.py  test_passphrase_generating.py  test_sequin.py  test_ssh_agent_client.py  test_typing.py
towncrier.d/: +changelog.fixed.md  +hypothesis.added.md  +mention_mkdocstrings_in_footer.fixed.md  +mike.fixed.md  +mkdocs_offline.fixed.md  +mypy_strict_typing.fixed.md  +purge_javascript.fixed.md  +release_contents.fixed.md  +ruff.fixed.md  +subsystemfallback.deprecated.md  1.added.md  10.changed.md  11.changed.md  12.added.md  3.changed.md  4.changed.md  5.fixed.md  6.fixed.md  7.changed.md  8.fixed.md  9.changed.md
(+88 files in other folders)
